--- a/whatsnew/changelog.po
+++ b/whatsnew/changelog.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-08-17 21:31-0300\n"
+"PO-Revision-Date: 2021-09-04 17:41-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -385,10 +385,9 @@ msgid ""
 "_main_thread, instead of a _DummyThread instance."
 msgstr ""
 "`bpo-40089 <https://bugs.python.org/issue40089>`__: Arregla threading."
-"_after_fork(): si el hilo no fue llamado por un hilo lanzado por threading.Thread,"
-" threading._after_fork() ahora crea una instancia "
-"_MainThread para _main_thread, en lugar de una instancia "
-"_DummyThread."
+"_after_fork(): si el hilo no fue llamado por un hilo lanzado por threading."
+"Thread, threading._after_fork() ahora crea una instancia _MainThread para "
+"_main_thread, en lugar de una instancia _DummyThread."
 
 #: ../build/NEWS:126
 msgid ""
@@ -1274,8 +1273,8 @@ msgid ""
 msgstr ""
 "`bpo-39606 <https://bugs.python.org/issue39606>`__: Arregla la regresión "
 "causada por FIX para `bpo-39386 <https://bugs.python.org/issue39386>`__, que "
-"evitó la llamada ``aclose`` en un generador de ASYNC que ya se había "
-"cerrado o agotado."
+"evitó la llamada ``aclose`` en un generador de ASYNC que ya se había cerrado "
+"o agotado."
 
 #: ../build/NEWS:442
 msgid ""
@@ -1939,8 +1938,8 @@ msgid ""
 "*end_col_offset* for Starred Expression AST nodes when they are among the "
 "elements in the *args* attribute of Call AST nodes."
 msgstr ""
-"`bpo-39080 <https://bugs.python.org/issue39080>`__: Arregla el valor de *"
-"end_col_offset* para expresión protagonizada nodos AST cuando se encuentran "
+"`bpo-39080 <https://bugs.python.org/issue39080>`__: Arregla el valor de "
+"*end_col_offset* para expresión protagonizada nodos AST cuando se encuentran "
 "entre los elementos en el atributo *args* de la llamada a nodos AST."
 
 #: ../build/NEWS:704
@@ -6447,10 +6446,10 @@ msgid ""
 "intermingled declarations will be needed again."
 msgstr ""
 "`bpo-37191 <https://bugs.python.org/issue37191>`__: Python.h no necesita "
-"soporte de compilador para las declaraciones entremezcladas (``-Wdeclaration-after-statement``"
-" de GCC), que se agregaron en 3.8.0 Beta "
-"1. Tenga en cuenta que en Python 3.9, se necesitarán nuevamente las "
-"declaraciones entremezcladas."
+"soporte de compilador para las declaraciones entremezcladas (``-Wdeclaration-"
+"after-statement`` de GCC), que se agregaron en 3.8.0 Beta 1. Tenga en cuenta "
+"que en Python 3.9, se necesitarán nuevamente las declaraciones "
+"entremezcladas."
 
 #: ../build/NEWS:2435
 msgid ""
@@ -6998,8 +6997,8 @@ msgid ""
 "`bpo-29262 <https://bugs.python.org/issue29262>`__: Add ``get_origin()`` and "
 "``get_args()`` introspection helpers to ``typing`` module."
 msgstr ""
-"`bpo-29262 <https://bugs.python.org/issue29262>`__: Agrega ``get_origin()``"
-" y ``get_args()`` ayudantes de la introspección al módulo ``typing``."
+"`bpo-29262 <https://bugs.python.org/issue29262>`__: Agrega ``get_origin()`` "
+"y ``get_args()`` ayudantes de la introspección al módulo ``typing``."
 
 #: ../build/NEWS:2640
 msgid ""
@@ -12561,8 +12560,8 @@ msgid ""
 msgstr ""
 "`bpo-23722 <https://bugs.python.org/issue23722>`__: a: exc: 'runtenceerror` "
 "ahora se levanta cuando la metaclass personalizada no proporciona la entrada "
-"``__classcel__`' en el espacio de nombres pasado a`` Tipo .__ New__``.R:"
-"exc:`deprecationwarning 'se emitió en Python 3.6--3.7."
+"``__classcel__`' en el espacio de nombres pasado a`` Tipo .__ New__``.R:exc:"
+"`deprecationwarning 'se emitió en Python 3.6--3.7."
 
 #: ../build/NEWS:4695
 msgid ""
@@ -15130,10 +15129,9 @@ msgid ""
 "the :mod:`csv` reader are now :class:`bool` instances instead of integers 0 "
 "or 1."
 msgstr ""
-"`bpo-34197 <https://bugs.python.org/issue34197>`__: Atributos *"
-"skipinitialspace*, *doublequote* y *strict* del atributo *dialect* "
-"de :mod:`csv` lector es ahora :class:`bool` instancias en lugar de enteros 0 "
-"o 1."
+"`bpo-34197 <https://bugs.python.org/issue34197>`__: Atributos "
+"*skipinitialspace*, *doublequote* y *strict* del atributo *dialect* de :mod:"
+"`csv` lector es ahora :class:`bool` instancias en lugar de enteros 0 o 1."
 
 #: ../build/NEWS:5585
 msgid ""
@@ -15836,8 +15834,8 @@ msgid ""
 "`bpo-33672 <https://bugs.python.org/issue33672>`__: Fix Task.__repr__ crash "
 "with Cython's bogus coroutines"
 msgstr ""
-"`bpo-33672 <https://bugs.python.org/issue33672>`__: Arregla problema con Task.__repr__ "
-"con las corutinas extrañas de Cython"
+"`bpo-33672 <https://bugs.python.org/issue33672>`__: Arregla problema con "
+"Task.__repr__ con las corutinas extrañas de Cython"
 
 #: ../build/NEWS:5825 ../build/NEWS:7476
 msgid ""
@@ -17245,9 +17243,9 @@ msgid ""
 "SSL_CTX_set_min_proto_version.html feature."
 msgstr ""
 "`bpo-31453 <https://bugs.python.org/issue31453>`__: Agrega constantes de "
-"TLSVersion y atributos SSLContext.maximum_version / minimum_version. La nueva "
-"API envuelve la característica OpenSSL 1.1 https://www.openssl.org/docs/man1.1.0/ssl/"
-"SSL_CTX_set_min_proto_version.html."
+"TLSVersion y atributos SSLContext.maximum_version / minimum_version. La "
+"nueva API envuelve la característica OpenSSL 1.1 https://www.openssl.org/"
+"docs/man1.1.0/ssl/SSL_CTX_set_min_proto_version.html."
 
 #: ../build/NEWS:6310 ../build/NEWS:8159
 msgid ""
@@ -18198,10 +18196,10 @@ msgid ""
 "flakiness of test_pkg by not using the scary test.support.module_cleanup() "
 "logic to save and restore sys.modules contents between test cases."
 msgstr ""
-"`bpo-34200 <https://bugs.python.org/issue 34200>`__: Arregla no "
-"determinista fija de test_pkg al no usar la prueba de miedo.support."
-"module_cleanup() lógica para guardar y restaurar los contenidos de Sys."
-"modules entre la pruebacasos."
+"`bpo-34200 <https://bugs.python.org/issue 34200>`__: Arregla no determinista "
+"fija de test_pkg al no usar la prueba de miedo.support.module_cleanup() "
+"lógica para guardar y restaurar los contenidos de Sys.modules entre la "
+"pruebacasos."
 
 #: ../build/NEWS:6639
 msgid ""
@@ -37230,7 +37228,8 @@ msgstr ""
 "internamente aquellos tamaños en UINT_MAX. Esto resuelve una regresión en "
 "3.5, donde gzipfile.read() no pudo leer trozos más de 2 o 4 gib.El cambio "
 "afecta al parámetro zlib.Decompress.decompress() max_length, el parámetro "
-"zlib.decompress() tamaño del búfer, y el parámetro zlib.decompress.flush() longitud."
+"zlib.decompress() tamaño del búfer, y el parámetro zlib.decompress.flush() "
+"longitud."
 
 #: ../build/NEWS:16830 ../build/NEWS:19381
 msgid ""
@@ -38456,8 +38455,8 @@ msgid ""
 "`bpo-26079 <https://bugs.python.org/issue26079>`__: Fixing the build output "
 "folder for tix-8.4.3.6. Patch by Bjoern Thiel."
 msgstr ""
-"`bpo-26079 <https://bugs.python.org/issue26079>`__: Arregla de la "
-"carpeta de salida de compilación para TIX-8.4.3.6. Parche por Bjoern Thiel."
+"`bpo-26079 <https://bugs.python.org/issue26079>`__: Arregla de la carpeta de "
+"salida de compilación para TIX-8.4.3.6. Parche por Bjoern Thiel."
 
 #: ../build/NEWS:17245 ../build/NEWS:19214
 msgid ""
@@ -39365,10 +39364,10 @@ msgid ""
 "64-bit size for BINUNICODE8 and BINBYTES8 opcodes no longer silently ignored "
 "on 32-bit platforms in C implementation."
 msgstr ""
-"`bpo-25262 <https://bugs.python.org/issue25262>`__: Añadido soporte para opcode "
-"BINBYTES8 en la implementación de Python de unpickler. Los más altos 32 "
-"bits de tamaño de 64 bits para opcodes BINUNICODE8 y BINBYTES8 no se ignoran "
-"silenciosamente en plataformas de 32 bits en la implementación de C."
+"`bpo-25262 <https://bugs.python.org/issue25262>`__: Añadido soporte para "
+"opcode BINBYTES8 en la implementación de Python de unpickler. Los más altos "
+"32 bits de tamaño de 64 bits para opcodes BINUNICODE8 y BINBYTES8 no se "
+"ignoran silenciosamente en plataformas de 32 bits en la implementación de C."
 
 #: ../build/NEWS:19484
 msgid ""
@@ -39527,8 +39526,8 @@ msgid ""
 "HTMLParser.feed() returns all the data, even when convert_charrefs is True."
 msgstr ""
 "`bpo-23144 <https://bugs.python.org/issue23144>`__: Asegúrese de que "
-"HTMLPARSER.FEED() retorne todos los datos, incluso cuando convert_charrefs es "
-"verdadero."
+"HTMLPARSER.FEED() retorne todos los datos, incluso cuando convert_charrefs "
+"es verdadero."
 
 #: ../build/NEWS:19546
 msgid ""
@@ -41114,8 +41113,8 @@ msgid ""
 "on patch by Daniel Wagner-Hall."
 msgstr ""
 "`bpo-15836 <https://bugs.python.org/issue15836>`__: assertRaises(), "
-"assertRaisesRegex(), assertWarns() y assertWarnsRegex() afirmaciones "
-"Ahora verifique el tipo del primer argumento para evitar el posible error de "
+"assertRaisesRegex(), assertWarns() y assertWarnsRegex() afirmaciones Ahora "
+"verifique el tipo del primer argumento para evitar el posible error de "
 "usuario. Basado en el parche de Daniel Wagner-Hall."
 
 #: ../build/NEWS:20300
@@ -41133,10 +41132,10 @@ msgid ""
 "readable and evaluable repr for these objects. Based on patch by Josh "
 "Rosenberg."
 msgstr ""
-"`bpo-22955 <https://bugs.python.org/issue22955>`__: objetos attrgetter, itemgetter "
-"y methodcaller en el módulo del operador ahora admite el serializado."
-"Añadido legible y evaluable repr para estos objetos. Basado en el parche de "
-"Josh Rosenberg."
+"`bpo-22955 <https://bugs.python.org/issue22955>`__: objetos attrgetter, "
+"itemgetter y methodcaller en el módulo del operador ahora admite el "
+"serializado.Añadido legible y evaluable repr para estos objetos. Basado en "
+"el parche de Josh Rosenberg."
 
 #: ../build/NEWS:20307
 msgid ""
@@ -41526,8 +41525,8 @@ msgid ""
 "`bpo-24190 <https://bugs.python.org/issue24190>`__: Implement inspect."
 "BoundArgument.apply_defaults() method. Contributed by Yury Selivanov."
 msgstr ""
-"`bpo-24190 <https://bugs.python.org/issue24190>`__: Implementar método inspect."
-"BoundArgument.apply_defaults(). Contribuido por Yury Selivanov."
+"`bpo-24190 <https://bugs.python.org/issue24190>`__: Implementar método "
+"inspect.BoundArgument.apply_defaults(). Contribuido por Yury Selivanov."
 
 #: ../build/NEWS:20435
 msgid ""
@@ -42893,7 +42892,8 @@ msgid ""
 "`bpo-7830 <https://bugs.python.org/issue7830>`__: Flatten nested functools."
 "partial."
 msgstr ""
-"`bpo-7830 <https://bugs.python.org/issue7830>`__: Aplana functools.partial anidados."
+"`bpo-7830 <https://bugs.python.org/issue7830>`__: Aplana functools.partial "
+"anidados."
 
 #: ../build/NEWS:20944
 msgid ""
@@ -43379,8 +43379,8 @@ msgid ""
 "Unicode case operations (upper, lower, title, swapcase, casefold)."
 msgstr ""
 "`bpo-22643 <https://bugs.python.org/issue22643>`__: Arregla el "
-"desbordamiento entero en las operaciones de casos Unicode (upper, "
-"lower, title, swapcase, casefold)."
+"desbordamiento entero en las operaciones de casos Unicode (upper, lower, "
+"title, swapcase, casefold)."
 
 #: ../build/NEWS:21115
 msgid ""
@@ -46704,8 +46704,8 @@ msgid ""
 "version.  It had never been present in the C version."
 msgstr ""
 "`bpo-10650 <https://bugs.python.org/issue10650>`__: Retira el parámetro "
-"'watchexp' no estándar del método Decimal.quantize() en la "
-"versión de Python. Nunca había estado presente en la versión C."
+"'watchexp' no estándar del método Decimal.quantize() en la versión de "
+"Python. Nunca había estado presente en la versión C."
 
 #: ../build/NEWS:22197
 msgid ""
@@ -46903,8 +46903,8 @@ msgid ""
 "startswith assert or assret."
 msgstr ""
 "`bpo-21238 <https://bugs.python.org/issue21238>`__: Nueva palabra argumento "
-"`unsafe` para Mock. Lanza `AttributeError` en caso de un atributo "
-"startswith assert o assret."
+"`unsafe` para Mock. Lanza `AttributeError` en caso de un atributo startswith "
+"assert o assret."
 
 #: ../build/NEWS:22262
 msgid ""
