sufriendo un rato

--- a/whatsnew/changelog.po
+++ b/whatsnew/changelog.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-09-04 17:41-0300\n"
+"PO-Revision-Date: 2021-09-04 18:20-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -213,9 +213,9 @@ msgid ""
 "``Py_CLEAR(tstate->frame)``."
 msgstr ""
 "`bpo-20526 <https://bugs.python.org/issue20526>`__: Arregla :c:func:"
-"`PyThreadState_Clear()`. ``PyThreadState.frame '' es una referencia "
-"prestada, no una referencia fuerte: ``PyThreadState_Clear()`` no debe llamar "
-"a ``Py_CLEAR(tstate->frame)``."
+"`PyThreadState_Clear()`. ``PyThreadState.frame`` es una referencia prestada, "
+"no una referencia fuerte: ``PyThreadState_Clear()`` no debe llamar a "
+"``Py_CLEAR(tstate->frame)``."
 
 #: ../build/NEWS:64
 msgid ""
@@ -373,9 +373,9 @@ msgid ""
 "now the exception."
 msgstr ""
 "`bpo-40126 <https://bugs.python.org/issue40126>`__: Se corrigió el reversión "
-"de múltiples parches en Unittest.mock.El ``__exit __()' '' '' '' ahora nunca "
-"se llama si se ha fallado ``__enter__()``. Retornando verdadero de "
-"``__exit__()`` silencies ahora la excepción."
+"de múltiples parches en unittest.mock. El ``__exit __()`` del parche ahora "
+"nunca se llama si se ha fallado ``__enter__()``. Retornando verdadero desde "
+"``__exit__()`` silencia ahora la excepción."
 
 #: ../build/NEWS:122
 msgid ""
@@ -409,12 +409,12 @@ msgid ""
 "implementation of ``getgrouplist()`` sets ``ngroups`` to the total number of "
 "groups. For other implementations, double the group list size."
 msgstr ""
-"`bpo-40014 <https://bugs.python.org/issue40014>`__: fix '' os."
-"getgroupplist() ``: Si ``getgroupplist()`` la función falla porque la lista "
-"de grupos es demasiado pequeña, vuelva a intentarlocon una lista de grupos "
-"más grandes.En el fracaso, la implementación de GLIBC de ``getgroupplist()`` "
-"establece ``ngroups`` del número total de grupos.Para otras "
-"implementaciones, doble el tamaño de la lista de grupos."
+"`bpo-40014 <https://bugs.python.org/issue40014>`__: fix ``os."
+"getgroupplist()``: Si ``getgroupplist()`` la función falla porque la lista "
+"de grupos es demasiado pequeña, vuelva a intentarlo con una lista de grupos "
+"más grandes. En el fracaso, la implementación de GLIBC de "
+"``getgroupplist()`` establece ``ngroups`` del número total de grupos. Para "
+"otras implementaciones, doble el tamaño de la lista de grupos."
 
 #: ../build/NEWS:137
 msgid ""
@@ -671,7 +671,7 @@ msgid ""
 "'specification' in format doc."
 msgstr ""
 "`bpo-13790 <https://bugs.python.org/issue11790>`__: Cambiar 'cadena' a "
-"'Especificación' en formato Doc."
+"'especificación' en formato doc."
 
 #: ../build/NEWS:231
 msgid ""
@@ -1226,9 +1226,9 @@ msgid ""
 "'class' to 'module' where appropriate and add readmodule comment. Patch by "
 "Hakan Çelik."
 msgstr ""
-"`bpo-39654 <https://bugs.python.org/issue39654>`__: en Pyclbr Doc, actualice "
-"'Clase' a 'Módulo' cuando sea apropiado y agregue Readmodule Comment. Parche "
-"por Hakan Çelik."
+"`bpo-39654 <https://bugs.python.org/issue39654>`__: en Pyclbr Doc, actualiza "
+"'clase' a 'módulo' cuando sea apropiado y agrega un comentario readmodule. "
+"Parche por Hakan Çelik."
 
 #: ../build/NEWS:419
 msgid ""
@@ -1252,9 +1252,9 @@ msgid ""
 "functions in `fcntl`, `msvcrt`, `os`, `resource`, `shutil`, `signal` and "
 "`syslog`."
 msgstr ""
-"`bpo-39184 <https://bugs.python.org/issue39184>`__: Agregue eventos de "
-"auditoría a funciones en `fcntl`,` MSVCRT`, `OS`,` Resource`, 'Slutil`, "
-"`Signal' y'syslog`."
+"`bpo-39184 <https://bugs.python.org/issue39184>`__: Agrega eventos de "
+"auditoría a funciones en `fcntl`, `msvcrt`, `os`, `resource`, `shutil`, "
+"`signal` y `syslog`."
 
 #: ../build/NEWS:436
 msgid ""
@@ -1327,9 +1327,9 @@ msgid ""
 "the Python standard library, to support uncommon installation path like ``/"
 "usr/lib64/python3.9/`` on Fedora. Patch by Jan Matějek."
 msgstr ""
-"`bpo-21016 <https://bugs.python.org/issue21016>`__: el:mod:`pydoc` y :mod:"
-"`trace 'módulos ahora use el módulo:mod:`sysconfig' para obtener la ruta aLa "
-"biblioteca estándar de Python, para admitir la ruta de instalación poco "
+"`bpo-21016 <https://bugs.python.org/issue21016>`__: Los módulos :mod:`pydoc` "
+"y :mod:`trace` ahora usan el módulo :mod:`sysconfig` para obtener la ruta a "
+"la biblioteca estándar de Python, para admitir la ruta de instalación poco "
 "común como ``/usr/lib64/python3.9/`` en Fedora. Parche de Jan Matějek."
 
 #: ../build/NEWS:465
@@ -1414,8 +1414,8 @@ msgid ""
 "comparison operators."
 msgstr ""
 "`bpo-39421 <https://bugs.python.org/issue39421>`__: Arregla los posibles "
-"fallos cuando opera con las funciones en:mod:'MAPQ' Módulo y operadores de "
-"comparación personalizados."
+"fallos cuando opera con las funciones en el módulo :mod:`heapq` y operadores "
+"de comparación personalizados."
 
 #: ../build/NEWS:505
 msgid ""
@@ -1548,8 +1548,8 @@ msgid ""
 "str and List[str] again."
 msgstr ""
 "`bpo-39390 <https://bugs.python.org/issue39390>`__: Se corrigió una "
-"regresión con la devolución de llamada 'Ignore' de:func:`Slightil.Copytree`."
-"Los tipos de argumentos ahora son STR y LISTA [STR] nuevamente."
+"regresión con la devolución de llamada `ignore` de :func:`slightil."
+"copytree`. Los tipos de argumentos ahora son str y List[str] nuevamente."
 
 #: ../build/NEWS:552
 msgid ""
@@ -2257,10 +2257,10 @@ msgid ""
 "module now detects if Python is linked to libedit at runtime on all "
 "platforms.  Previously, the check was only done on macOS."
 msgstr ""
-"`bpo-38634 <https://bugs.python.org/issue38634>`__: The:mod:`Readline "
-"'Module ahora detecta si Python está vinculado a LiBedit en tiempo de "
-"ejecución en todas las plataformas.Anteriormente, el cheque solo se realizó "
-"en MacOS."
+"`bpo-38634 <https://bugs.python.org/issue38634>`__: El módulo :mod:"
+"`readline` ahora detecta si Python está vinculado a LiBedit en tiempo de "
+"ejecución en todas las plataformas. Anteriormente, el chequeo solo se "
+"realizó en MacOS."
 
 #: ../build/NEWS:840
 msgid ""
@@ -2368,8 +2368,8 @@ msgid ""
 "addresses with a trailing new line."
 msgstr ""
 "`bpo-38820 <https://bugs.python.org/issue38820>`__: Haz que Python sea "
-"compatible con OpenSSL 3.0.0.:func:`ssl.sslsocket.getpeercert 'ya no retorna "
-"las direcciones IPv6 con una nueva línea que se arrastra."
+"compatible con OpenSSL 3.0.0. :func:`ssl.sslsocket.getpeercert` ya no "
+"retorna las direcciones IPv6 con una nueva línea que se arrastra."
 
 #: ../build/NEWS:878
 msgid ""
@@ -2438,9 +2438,9 @@ msgid ""
 "func:`pathlib.WindowsPath.glob` matches now the case of the pattern for "
 "literal parts."
 msgstr ""
-"`bpo-31202 <https://bugs.python.org/issue31202>`__: El caso del resultado de:"
-"func:`pathlib.windowspath.glob 'coincide ahora en el caso del patrón de las "
-"partes literales."
+"`bpo-31202 <https://bugs.python.org/issue31202>`__: El caso del resultado "
+"de :func:`pathlib.windowspath.glob` coincide ahora en el caso del patrón de "
+"las partes literales."
 
 #: ../build/NEWS:902
 msgid ""
@@ -2468,9 +2468,9 @@ msgid ""
 "parameter, now required in 3.8, is omitted. Also clarified the hmac module "
 "documentation and docstrings."
 msgstr ""
-"`bpo-33604 <https://bugs.python.org/issue33604>`__: fijado 'hmac.new` y "
-"`hmac.hmac' para elevar a TypeError en lugar de ValueError cuando el "
-"parámetro digestmod, ahora se requiere en 3.8, se omite.También aclaró la "
+"`bpo-33604 <https://bugs.python.org/issue33604>`__: fijado `hmac.new` y "
+"`hmac.hmac` para elevar a TypeError en lugar de ValueError cuando el "
+"parámetro digestmod, ahora se requiere en 3.8, se omite. También aclaró la "
 "documentación y documentos de los módulos HMAC."
 
 #: ../build/NEWS:912
@@ -3250,8 +3250,8 @@ msgid ""
 "their own behavior in the face of bad requests."
 msgstr ""
 "`bpo-38216 <https://bugs.python.org/issue38216>`__: Permita que el código "
-"raro que quiera enviar solicitudes HTTP no válidas de la biblioteca 'http."
-"client' de la forma de hacerlo.Las correcciones para `bpo-30458 <https://"
+"raro que quiera enviar solicitudes HTTP no válidas de la biblioteca `http."
+"client` de la forma de hacerlo. Las correcciones para `bpo-30458 <https://"
 "bugs.python.org/issue3458>`__ llevó a la rotura para algunos proyectos que "
 "confiaban en esta capacidad para probar su propio comportamiento ante las "
 "malas solicitudes."
@@ -3326,7 +3326,7 @@ msgid ""
 "Toriz Cruz."
 msgstr ""
 "`bpo-37828 <https://bugs.python.org/issue37828>`__: Arregla el nombre de "
-"simulacro predeterminado en:meth:'Unittest.mock.mock.assert_called' "
+"simulacro predeterminado en :meth:`unittest.mock.Mock.assert_called` "
 "excepciones. Parche de Abraham Toriz Cruz."
 
 #: ../build/NEWS:1263
@@ -4261,7 +4261,7 @@ msgid ""
 "3.7.4 and 3.8.0b2 to 3.8.0b4."
 msgstr ""
 "`bpo-38077 <https://bugs.python.org/issue38077>`__: inactivo ya no agrega "
-"'argv' al espacio de nombres de usuario al inicializarlo.Este error solo "
+"'argv' al espacio de nombres de usuario al inicializarlo. Este error solo "
 "afectó 3.7.4 y 3.8.0B2 a 3.8.0B4."
 
 #: ../build/NEWS:1585
@@ -4300,8 +4300,8 @@ msgid ""
 "`bpo-37803 <https://bugs.python.org/issue37803>`__: pdb's ``--help`` and ``--"
 "version`` long options now work."
 msgstr ""
-"`bpo-37803 <https://bugs.python.org/issue37803>`__: PDB'S ``Help``' y ``--"
-"version`` Opciones de larga duración ahora."
+"`bpo-37803 <https://bugs.python.org/issue37803>`__: ``--help`` y ``--"
+"version`` de pdb opciones largas ahora funcionan."
 
 #: ../build/NEWS:1600
 msgid ""
@@ -4959,10 +4959,10 @@ msgid ""
 "ImportError will include a message explaining the problem."
 msgstr ""
 "`bpo-25172 <https://bugs.python.org/issue25172>`__: Tratando de importar el "
-"módulo:mod:`crypt` en Windows resultará en: Exc:`ImportError` con un mensaje "
-"que explica que el módulono es compatible con Windows.En otras plataformas, "
-"si el módulo ``_crypt`' subyacente no está disponible, el ImportError "
-"incluirá un mensaje que explique el problema."
+"módulo :mod:`crypt` en Windows resultará en :exc:`ImportError` con un "
+"mensaje que explica que el módulo no es compatible con Windows. En otras "
+"plataformas, si el módulo ``_crypt`` subyacente no está disponible, el "
+"ImportError incluirá un mensaje que explique el problema."
 
 #: ../build/NEWS:1857
 msgid ""
@@ -5161,9 +5161,9 @@ msgid ""
 "parsing email headers with unexpectedly ending bare-quoted string value. "
 "Patch by Abhilash Raj."
 msgstr ""
-"`bpo-37491 <https://bugs.python.org/issue37491>`__: Arregla '' indexError`` "
+"`bpo-37491 <https://bugs.python.org/issue37491>`__: Arregla ``indexError`` "
 "al analizar los encabezados de correo electrónico con un valor de cadena de "
-"cotización desnudo inesperadamente. Parche por abhilash raj."
+"caracteres inesperado en el cierre de citas. Parche de Abhilash Raj."
 
 #: ../build/NEWS:1948
 msgid ""
@@ -5212,8 +5212,8 @@ msgid ""
 "in some situations."
 msgstr ""
 "`bpo-18374 <https://bugs.python.org/issue18374>`__: Arregla el atributo ``."
-"col_offset`` Class:`ast.binop' ', que tuvo un valor demasiado grande en "
-"algunas situaciones."
+"col_offset`` de la instancia anidad :class:`ast.BinOp`, que tuvo un valor "
+"demasiado grande en algunas situaciones."
 
 #: ../build/NEWS:1966
 msgid ""
