reviso fuzzy pendiente

--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-02-13 22:51-0300\n"
+"PO-Revision-Date: 2021-09-06 09:08-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1000,7 +1000,6 @@ msgstr ""
 "correo electrónico en formato de bytes."
 
 #: ../Doc/whatsnew/3.2.rst:687
-#, fuzzy
 msgid ""
 "New functions :func:`~email.message_from_bytes` and :func:`~email."
 "message_from_binary_file`, and new classes :class:`~email.parser."
@@ -1010,7 +1009,7 @@ msgstr ""
 "Nuevas funciones :func:`~email.message_from_bytes` y :func:`~email."
 "message_from_binary_file`, y nuevas clases :class:`~email.parser."
 "BytesFeedParser` y :class:`~email.parser.BytesParser` permiten mensajes de "
-"datos en binario ser analizados (*parsed*) en objetos modelados."
+"datos en binario para ser analizados (*parsed*) en objetos modelados."
 
 #: ../Doc/whatsnew/3.2.rst:692
 msgid ""
