--- a/howto/descriptor.po
+++ b/howto/descriptor.po
@@ -1,4 +1,4 @@
-# && Copyright (C) 2001-2020, Python Software Foundation
+# Copyright (C) 2001-2020, Python Software Foundation
 # This file is distributed under the same license as the Python package.
 # Maintained by the python-doc-es workteam.
 # docs-es@python.org /
