--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-08-27 08:14+0100\n"
+"PO-Revision-Date: 2021-09-25 10:30+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1648,7 +1648,6 @@ msgstr ""
 "codificación dada."
 
 #: ../Doc/whatsnew/2.3.rst:1080
-#, fuzzy
 msgid ""
 "The method resolution order used by new-style classes has changed, though "
 "you'll only notice the difference if you have a really complicated "
@@ -1678,7 +1677,6 @@ msgstr ""
 "problema y también implementó la solución codificando el algoritmo C3."
 
 #: ../Doc/whatsnew/2.3.rst:1093
-#, fuzzy
 msgid ""
 "Python runs multithreaded programs by switching between threads after "
 "executing N bytecodes.  The default value for N has been increased from 10 "
@@ -1697,7 +1695,6 @@ msgstr ""
 "puede recuperarse con la nueva función :func:`sys.getcheckinterval`."
 
 #: ../Doc/whatsnew/2.3.rst:1101
-#, fuzzy
 msgid ""
 "One minor but far-reaching change is that the names of extension types "
 "defined by the modules included with Python now contain the module and a "
@@ -1711,12 +1708,10 @@ msgstr ""
 "salida::"
 
 #: ../Doc/whatsnew/2.3.rst:1110
-#, fuzzy
 msgid "In 2.3, you get this::"
 msgstr "En 2.3, se obtiene esto::"
 
 #: ../Doc/whatsnew/2.3.rst:1115
-#, fuzzy
 msgid ""
 "One of the noted incompatibilities between old- and new-style classes has "
 "been removed: you can now assign to the :attr:`~definition.__name__` and :"
@@ -1733,12 +1728,10 @@ msgstr ""
 "asignación al atributo :attr:`~instance.__class__` de una instancia."
 
 #: ../Doc/whatsnew/2.3.rst:1125
-#, fuzzy
 msgid "String Changes"
-msgstr "Cambios en la cadena"
+msgstr "Cambios en las cadenas de texto"
 
 #: ../Doc/whatsnew/2.3.rst:1127
-#, fuzzy
 msgid ""
 "The :keyword:`in` operator now works differently for strings. Previously, "
 "when evaluating ``X in Y`` where *X* and *Y* are strings, *X* could only be "
@@ -1754,7 +1747,6 @@ msgstr ""
 "const:`True`. ::"
 
 #: ../Doc/whatsnew/2.3.rst:1140
-#, fuzzy
 msgid ""
 "Note that this doesn't tell you where the substring starts; if you need that "
 "information, use the :meth:`find` string method."
@@ -1763,7 +1755,6 @@ msgstr ""
 "esa información, utilice el método :meth:`find` string."
 
 #: ../Doc/whatsnew/2.3.rst:1143
-#, fuzzy
 msgid ""
 "The :meth:`strip`, :meth:`lstrip`, and :meth:`rstrip` string methods now "
 "have an optional argument for specifying the characters to strip.  The "
@@ -1775,12 +1766,10 @@ msgstr ""
 "blanco::"
 
 #: ../Doc/whatsnew/2.3.rst:1157
-#, fuzzy
 msgid "(Suggested by Simon Brunning and implemented by Walter Dörwald.)"
 msgstr "(Sugerido por Simon Brunning y aplicado por Walter Dörwald)"
 
 #: ../Doc/whatsnew/2.3.rst:1159
-#, fuzzy
 msgid ""
 "The :meth:`startswith` and :meth:`endswith` string methods now accept "
 "negative numbers for the *start* and *end* parameters."
@@ -1789,7 +1778,6 @@ msgstr ""
 "números negativos para los parámetros *start* y *end*."
 
 #: ../Doc/whatsnew/2.3.rst:1162
-#, fuzzy
 msgid ""
 "Another new string method is :meth:`zfill`, originally a function in the :"
 "mod:`string` module.  :meth:`zfill` pads a numeric string with zeros on the "
@@ -1802,12 +1790,10 @@ msgstr ""
 "operador ``%`` sigue siendo más flexible y potente que :meth:`zfill`. ::"
 
 #: ../Doc/whatsnew/2.3.rst:1174
-#, fuzzy
 msgid "(Contributed by Walter Dörwald.)"
 msgstr "(Contribución de Walter Dörwald.)"
 
 #: ../Doc/whatsnew/2.3.rst:1176
-#, fuzzy
 msgid ""
 "A new type object, :class:`basestring`, has been added. Both 8-bit strings "
 "and Unicode strings inherit from this type, so ``isinstance(obj, "
@@ -1821,7 +1807,6 @@ msgstr ""
 "crear instancias de :class:`basestring`."
 
 #: ../Doc/whatsnew/2.3.rst:1181
-#, fuzzy
 msgid ""
 "Interned strings are no longer immortal and will now be garbage-collected in "
 "the usual way when the only reference to them is from the internal "
@@ -1836,7 +1821,6 @@ msgid "Optimizations"
 msgstr "Optimizaciones"
 
 #: ../Doc/whatsnew/2.3.rst:1191
-#, fuzzy
 msgid ""
 "The creation of new-style class instances has been made much faster; they're "
 "now faster than classic classes!"
@@ -1845,7 +1829,6 @@ msgstr ""
 "rápida; ¡ahora son más rápidas que las clases clásicas!"
 
 #: ../Doc/whatsnew/2.3.rst:1194
-#, fuzzy
 msgid ""
 "The :meth:`sort` method of list objects has been extensively rewritten by "
 "Tim Peters, and the implementation is significantly faster."
@@ -1855,7 +1838,6 @@ msgstr ""
 "rápida."
 
 #: ../Doc/whatsnew/2.3.rst:1197
-#, fuzzy
 msgid ""
 "Multiplication of large long integers is now much faster thanks to an "
 "implementation of Karatsuba multiplication, an algorithm that scales better "
@@ -1870,7 +1852,6 @@ msgstr ""
 "significativamente por Tim Peters)"
 
 #: ../Doc/whatsnew/2.3.rst:1202
-#, fuzzy
 msgid ""
 "The ``SET_LINENO`` opcode is now gone.  This may provide a small speed "
 "increase, depending on your compiler's idiosyncrasies. See section :ref:"
@@ -1882,7 +1863,6 @@ msgstr ""
 "larga. (Eliminado por Michael Hudson)"
 
 #: ../Doc/whatsnew/2.3.rst:1206
-#, fuzzy
 msgid ""
 ":func:`xrange` objects now have their own iterator, making ``for i in "
 "xrange(n)`` slightly faster than ``for i in range(n)``.  (Patch by Raymond "
@@ -1893,7 +1873,6 @@ msgstr ""
 "range(n)``.  (Parche de Raymond Hettinger)"
 
 #: ../Doc/whatsnew/2.3.rst:1210
-#, fuzzy
 msgid ""
 "A number of small rearrangements have been made in various hotspots to "
 "improve performance, such as inlining a function or removing some code.  "
@@ -1906,7 +1885,6 @@ msgstr ""
 "pero mucha gente ha contribuido con cambios individuales)"
 
 #: ../Doc/whatsnew/2.3.rst:1214
-#, fuzzy
 msgid ""
 "The net result of the 2.3 optimizations is that Python 2.3 runs the  pystone "
 "benchmark around 25% faster than Python 2.2."
@@ -1915,12 +1893,10 @@ msgstr ""
 "ejecuta el benchmark pystone alrededor de un 25% f más rápido que Python 2.2."
 
 #: ../Doc/whatsnew/2.3.rst:1221
-#, fuzzy
 msgid "New, Improved, and Deprecated Modules"
 msgstr "Módulos nuevos, mejorados y obsoletos"
 
 #: ../Doc/whatsnew/2.3.rst:1223
-#, fuzzy
 msgid ""
 "As usual, Python's standard library received a number of enhancements and "
 "bug fixes.  Here's a partial list of the most notable changes, sorted "
@@ -1936,7 +1912,6 @@ msgstr ""
 "obtener todos los detalles."
 
 #: ../Doc/whatsnew/2.3.rst:1228
-#, fuzzy
 msgid ""
 "The :mod:`array` module now supports arrays of Unicode characters using the "
 "``'u'`` format character.  Arrays also now support using the ``+=`` "
@@ -1950,7 +1925,6 @@ msgstr ""
 "(Contribución de Jason Orendorff)"
 
 #: ../Doc/whatsnew/2.3.rst:1233
-#, fuzzy
 msgid ""
 "The :mod:`bsddb` module has been replaced by version 4.1.6 of the `PyBSDDB "
 "<http://pybsddb.sourceforge.net>`_ package, providing a more complete "
@@ -1962,7 +1936,6 @@ msgstr ""
 "BerkeleyDB."
 
 #: ../Doc/whatsnew/2.3.rst:1237
-#, fuzzy
 msgid ""
 "The old version of the module has been renamed to  :mod:`bsddb185` and is no "
 "longer built automatically; you'll  have to edit :file:`Modules/Setup` to "
@@ -1992,7 +1965,6 @@ msgstr ""
 "`bsddb`."
 
 #: ../Doc/whatsnew/2.3.rst:1249
-#, fuzzy
 msgid ""
 "The new :mod:`bz2` module is an interface to the bz2 data compression "
 "library. bz2-compressed data is usually smaller than  corresponding :mod:"
@@ -2004,7 +1976,6 @@ msgstr ""
 "Niemeyer)"
 
 #: ../Doc/whatsnew/2.3.rst:1253
-#, fuzzy
 msgid ""
 "A set of standard date/time types has been added in the new :mod:`datetime` "
 "module.  See the following section for more details."
@@ -2014,7 +1985,6 @@ msgstr ""
 "detalles."
 
 #: ../Doc/whatsnew/2.3.rst:1256
-#, fuzzy
 msgid ""
 "The Distutils :class:`Extension` class now supports an extra constructor "
 "argument named *depends* for listing additional source files that an "
@@ -2031,7 +2001,6 @@ msgstr ""
 "el objeto :class:`Extension` así::"
 
 #: ../Doc/whatsnew/2.3.rst:1267
-#, fuzzy
 msgid ""
 "Modifying :file:`sample.h` would then cause the module to be recompiled. "
 "(Contributed by Jeremy Hylton.)"
@@ -2040,7 +2009,6 @@ msgstr ""
 "(Contribución de Jeremy Hylton)"
 
 #: ../Doc/whatsnew/2.3.rst:1270
-#, fuzzy
 msgid ""
 "Other minor changes to Distutils: it now checks for the :envvar:`CC`, :"
 "envvar:`CFLAGS`, :envvar:`CPP`, :envvar:`LDFLAGS`, and :envvar:`CPPFLAGS` "
@@ -2053,7 +2021,6 @@ msgstr ""
 "de Python (contribución de Robert Weber)."
 
 #: ../Doc/whatsnew/2.3.rst:1275
-#, fuzzy
 msgid ""
 "Previously the :mod:`doctest` module would only search the docstrings of "
 "public methods and functions for test cases, but it now also examines "
@@ -2066,7 +2033,6 @@ msgstr ""
 "`unittest.TestSuite` a partir de un conjunto de pruebas :mod:`doctest`."
 
 #: ../Doc/whatsnew/2.3.rst:1280
-#, fuzzy
 msgid ""
 "The new ``gc.get_referents(object)`` function returns a list of all the "
 "objects referenced by *object*."
@@ -2075,7 +2041,6 @@ msgstr ""
 "objetos referenciados por *object*."
 
 #: ../Doc/whatsnew/2.3.rst:1283
-#, fuzzy
 msgid ""
 "The :mod:`getopt` module gained a new function, :func:`gnu_getopt`, that "
 "supports the same arguments as the existing :func:`getopt` function but uses "
@@ -2093,12 +2058,10 @@ msgstr ""
 "mezclarse.  Por ejemplo::"
 
 #: ../Doc/whatsnew/2.3.rst:1294
-#, fuzzy
 msgid "(Contributed by Peter Åstrand.)"
 msgstr "(Contribución de Peter Åstrand.)"
 
 #: ../Doc/whatsnew/2.3.rst:1296
-#, fuzzy
 msgid ""
 "The :mod:`grp`, :mod:`pwd`, and :mod:`resource` modules now return enhanced "
 "tuples::"
@@ -2107,12 +2070,10 @@ msgstr ""
 "mejoradas::"
 
 #: ../Doc/whatsnew/2.3.rst:1304
-#, fuzzy
 msgid "The :mod:`gzip` module can now handle files exceeding 2 GiB."
 msgstr "El módulo :mod:`gzip` ahora puede manejar archivos de más de 2 GiB."
 
 #: ../Doc/whatsnew/2.3.rst:1306
-#, fuzzy
 msgid ""
 "The new :mod:`heapq` module contains an implementation of a heap queue "
 "algorithm.  A heap is an array-like data structure that keeps items in a "
@@ -2132,7 +2093,6 @@ msgstr ""
 "información sobre la estructura de datos de la cola de prioridad)"
 
 #: ../Doc/whatsnew/2.3.rst:1314
-#, fuzzy
 msgid ""
 "The :mod:`heapq` module provides :func:`heappush` and :func:`heappop` "
 "functions for adding and removing items while maintaining the heap property "
@@ -2145,12 +2105,10 @@ msgstr ""
 "ejemplo que utiliza una lista de Python::"
 
 #: ../Doc/whatsnew/2.3.rst:1332
-#, fuzzy
 msgid "(Contributed by Kevin O'Connor.)"
 msgstr "(Contribución de Kevin O'Connor.)"
 
 #: ../Doc/whatsnew/2.3.rst:1334
-#, fuzzy
 msgid ""
 "The IDLE integrated development environment has been updated using the code "
 "from the IDLEfork project (http://idlefork.sourceforge.net).  The most "
