started removal of fuzzies

--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-08-08 10:31+0100\n"
+"PO-Revision-Date: 2021-09-26 10:19+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -88,7 +88,6 @@ msgstr ""
 "ellas es una modificación amplia de la semántica de Python."
 
 #: ../Doc/whatsnew/2.5.rst:34
-#, fuzzy
 msgid ""
 "As well as the language and library additions, other improvements and "
 "bugfixes were made throughout the source tree.  A search through the SVN "
@@ -102,7 +101,6 @@ msgstr ""
 "que ambas cifras estén subestimadas)"
 
 #: ../Doc/whatsnew/2.5.rst:39
-#, fuzzy
 msgid ""
 "This article doesn't try to be a complete specification of the new features; "
 "instead changes are briefly introduced using helpful examples.  For full "
@@ -119,7 +117,6 @@ msgstr ""
 "consulta el PEP de una nueva característica en particular."
 
 #: ../Doc/whatsnew/2.5.rst:45
-#, fuzzy
 msgid ""
 "Comments, suggestions, and error reports for this document are welcome; "
 "please e-mail them to the author or open a bug in the Python bug tracker."
@@ -129,12 +126,10 @@ msgstr ""
 "abra un error en el rastreador de errores de Python."
 
 #: ../Doc/whatsnew/2.5.rst:54
-#, fuzzy
 msgid "PEP 308: Conditional Expressions"
 msgstr "PEP 308: Expresiones condicionales"
 
 #: ../Doc/whatsnew/2.5.rst:56
-#, fuzzy
 msgid ""
 "For a long time, people have been requesting a way to write conditional "
 "expressions, which are expressions that return value A or value B depending "
@@ -149,7 +144,6 @@ msgstr ""
 "que tiene el mismo efecto que la siguiente::"
 
 #: ../Doc/whatsnew/2.5.rst:66
-#, fuzzy
 msgid ""
 "There have been endless tedious discussions of syntax on both python-dev and "
 "comp.lang.python.  A vote was even held that found the majority of voters "
@@ -165,12 +159,10 @@ msgstr ""
 "false_v``, ``if cond then true_v else false_v``, y otras 16 variaciones."
 
 #: ../Doc/whatsnew/2.5.rst:72
-#, fuzzy
 msgid "Guido van Rossum eventually chose a surprising syntax::"
 msgstr "Guido van Rossum eligió finalmente una sintaxis sorprendente::"
 
 #: ../Doc/whatsnew/2.5.rst:76
-#, fuzzy
 msgid ""
 "Evaluation is still lazy as in existing Boolean expressions, so the order of "
 "evaluation jumps around a bit.  The *condition* expression in the middle is "
@@ -185,7 +177,6 @@ msgstr ""
 "*valor_falso* sólo se evalúa cuando la condición es falsa."
 
 #: ../Doc/whatsnew/2.5.rst:82
-#, fuzzy
 msgid ""
 "This syntax may seem strange and backwards; why does the condition go in the "
 "*middle* of the expression, and not in the front as in C's ``c ? x : y``?  "
@@ -206,7 +197,6 @@ msgstr ""
 "La sintaxis condicional hace que este patrón sea un poco más obvio::"
 
 #: ../Doc/whatsnew/2.5.rst:92
-#, fuzzy
 msgid ""
 "I read the above statement as meaning \"here *contents* is  usually assigned "
 "a value of ``doc+'\\n'``; sometimes  *doc* is empty, in which special case "
@@ -219,7 +209,6 @@ msgstr ""
 "condicionales muy a menudo donde no hay un caso común y no común claro."
 
 #: ../Doc/whatsnew/2.5.rst:97
-#, fuzzy
 msgid ""
 "There was some discussion of whether the language should require surrounding "
 "conditional expressions with parentheses.  The decision was made to *not* "
@@ -233,7 +222,6 @@ msgstr ""
 "declaraciones::"
 
 #: ../Doc/whatsnew/2.5.rst:108
-#, fuzzy
 msgid ""
 "In the first version, I think a reader's eye might group the statement into "
 "'level = 1', 'if logging', 'else 0', and think that the condition decides "
@@ -248,7 +236,6 @@ msgstr ""
 "siempre y que se está eligiendo entre dos valores."
 
 #: ../Doc/whatsnew/2.5.rst:114
-#, fuzzy
 msgid ""
 "Another reason for including the brackets: a few odd combinations of list "
 "comprehensions and lambdas could look like incorrect conditional "
@@ -261,12 +248,10 @@ msgstr ""
 "alrededor de sus expresiones condicionales, no se encontrará con este caso."
 
 #: ../Doc/whatsnew/2.5.rst:123
-#, fuzzy
 msgid ":pep:`308` - Conditional Expressions"
 msgstr ":pep:`308` - Expresiones condicionales"
 
 #: ../Doc/whatsnew/2.5.rst:123
-#, fuzzy
 msgid ""
 "PEP written by Guido van Rossum and Raymond D. Hettinger; implemented by "
 "Thomas Wouters."
@@ -275,12 +260,10 @@ msgstr ""
 "Thomas Wouters."
 
 #: ../Doc/whatsnew/2.5.rst:132
-#, fuzzy
 msgid "PEP 309: Partial Function Application"
-msgstr "PEP 309: Aplicación de funciones parciales"
+msgstr "PEP 309: Aplicación parcial de funciones"
 
 #: ../Doc/whatsnew/2.5.rst:134
-#, fuzzy
 msgid ""
 "The :mod:`functools` module is intended to contain tools for functional-"
 "style programming."
@@ -289,7 +272,6 @@ msgstr ""
 "programación de estilo funcional."
 
 #: ../Doc/whatsnew/2.5.rst:137
-#, fuzzy
 msgid ""
 "One useful tool in this module is the :func:`partial` function. For programs "
 "written in a functional style, you'll sometimes want to construct variants "
@@ -306,7 +288,6 @@ msgstr ""
 "llama \"aplicación parcial de funciones\"."
 
 #: ../Doc/whatsnew/2.5.rst:144
-#, fuzzy
 msgid ""
 ":func:`partial` takes the arguments ``(function, arg1, arg2, ... "
 "kwarg1=value1, kwarg2=value2)``.  The resulting object is callable, so you "
@@ -317,12 +298,10 @@ msgstr ""
 "que puedes llamarlo para invocar la *función* con los argumentos rellenados."
 
 #: ../Doc/whatsnew/2.5.rst:148
-#, fuzzy
 msgid "Here's a small but realistic example::"
 msgstr "He aquí un pequeño pero realista ejemplo::"
 
 #: ../Doc/whatsnew/2.5.rst:160
-#, fuzzy
 msgid ""
 "Here's another example, from a program that uses PyGTK.  Here a context-"
 "sensitive pop-up menu is being constructed dynamically.  The callback "
@@ -336,7 +315,6 @@ msgstr ""
 "argumento ::"
 
 #: ../Doc/whatsnew/2.5.rst:173
-#, fuzzy
 msgid ""
 "Another function in the :mod:`functools` module is the "
 "``update_wrapper(wrapper, wrapped)`` function that helps you write well-"
@@ -352,7 +330,6 @@ msgstr ""
 "escribir::"
 
 #: ../Doc/whatsnew/2.5.rst:186
-#, fuzzy
 msgid ""
 ":func:`wraps` is a decorator that can be used inside your own decorators to "
 "copy the wrapped function's information.  An alternate  version of the "
@@ -363,12 +340,10 @@ msgstr ""
 "alternativa del ejemplo anterior sería::"
 
 #: ../Doc/whatsnew/2.5.rst:201
-#, fuzzy
 msgid ":pep:`309` - Partial Function Application"
-msgstr ":pep:`309` - Aplicación de funciones parciales"
+msgstr ":pep:`309` - Aplicación parcial de funciones"
 
 #: ../Doc/whatsnew/2.5.rst:201
-#, fuzzy
 msgid ""
 "PEP proposed and written by Peter Harris; implemented by Hye-Shik Chang and "
 "Nick Coghlan, with adaptations by Raymond Hettinger."
