--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-07-04 18:19-0300\n"
+"PO-Revision-Date: 2021-09-27 13:55-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -653,7 +653,7 @@ msgstr ""
 "todos los cambios se escriben en la base de datos, o deshacerse, lo que "
 "significa que todos los cambios se descartan y la base de datos no ha "
 "cambiado. Consulte cualquier libro de texto de base de datos para obtener "
-"más información)."
+"más información.)"
 
 #: ../Doc/whatsnew/2.6.rst:372
 msgid ""
@@ -763,7 +763,7 @@ msgid ""
 "lock::"
 msgstr ""
 "El módulo :mod:`contextlib` también tiene una función ``nested(mgr1, "
-"mgr2, ...)``que combina varios gestores de contexto para que no necesite "
+"mgr2, ...)`` que combina varios gestores de contexto para que no necesite "
 "escribir sentencias ':keyword:`with`' anidadas. En este ejemplo, se utiliza "
 "una única sentencia ':keyword:`!with`' que inicia una transacción de base de "
 "datos y adquiere un bloqueo del hilo::"
@@ -901,7 +901,7 @@ msgid ""
 "option or setting the :envvar:`PYTHONNOUSERSITE` environment variable."
 msgstr ""
 "La característica se puede desactivar por completo ejecutando Python con la "
-"opción :option:`-s` o seteando la variable de entorno :envvar:"
+"opción :option:`-s` o *seteando* la variable de entorno :envvar:"
 "`PYTHONNOUSERSITE`."
 
 #: ../Doc/whatsnew/2.6.rst:552
@@ -1068,7 +1068,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:737
 msgid "Curly brackets can be escaped by doubling them::"
-msgstr "Las llaves se pueden escapar duplicándolas::"
+msgstr "Las llaves se pueden escapar duplicándose::"
 
 #: ../Doc/whatsnew/2.6.rst:742
 msgid ""
