--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-09-27 13:55-0300\n"
+"PO-Revision-Date: 2021-09-27 14:39-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -68,9 +68,9 @@ msgid ""
 "new features that aren't related to Python 3.0 in some way."
 msgstr ""
 "Se han agregado algunos paquetes nuevos importantes a la biblioteca "
-"estándar, como los módulos :mod:`multiprocessing` y :mod:` json`, pero no "
-"hay muchas características nuevas que no estén relacionadas con Python 3.0 "
-"de alguna manera."
+"estándar, como los módulos :mod:`multiprocessing` y :mod:`json`, pero no hay "
+"muchas características nuevas que no estén relacionadas con Python 3.0 de "
+"alguna manera."
 
 #: ../Doc/whatsnew/2.6.rst:69
 msgid ""
@@ -178,7 +178,7 @@ msgid ""
 "switch is available to Python code as the boolean variable :data:`sys."
 "py3kwarning`, and to C extension code as :c:data:`Py_Py3kWarningFlag`."
 msgstr ""
-"Un nuevo modificador de línea de comandos, :opction:`!-3`, habilita "
+"Un nuevo modificador de línea de comandos, :option:`!-3`, habilita "
 "advertencias sobre características que se eliminarán en Python 3.0. Puede "
 "ejecutar código con este modificador para ver cuánto trabajo será necesario "
 "para migrar el código a 3.0. El valor de este modificador está disponible "
@@ -709,7 +709,7 @@ msgstr ""
 "En el siguiente código, la ejecución simplemente caerá al final de la "
 "función, retornando el valor predeterminado ``None``. ``None`` es falso, por "
 "lo que la excepción se volverá a lanzar automáticamente. Si lo desea, puede "
-"ser más explícito y agregar una sentencia keyword:`return` en la ubicación "
+"ser más explícito y agregar una sentencia :keyword:`return` en la ubicación "
 "marcada. ::"
 
 #: ../Doc/whatsnew/2.6.rst:431
@@ -1017,7 +1017,7 @@ msgstr ""
 "estructuras de datos utilizando objetos proxy. El siguiente ejemplo crea un "
 "diccionario compartido llamando al método :meth:`dict`; los procesos de "
 "trabajo luego insertan valores en el diccionario. (El bloqueo no se realiza "
-"automáticamente, lo cual no importa en este ejemplo. Los métodos de `:Class:"
+"automáticamente, lo cual no importa en este ejemplo. Los métodos de :class:"
 "`Manager` también incluyen :meth:`Lock`, :meth:`RLock`, y :meth:`Semaphore` "
 "para crear bloqueos compartidos.)"
 
