--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-10-02 10:18+0100\n"
+"PO-Revision-Date: 2021-10-03 10:57-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
 "Language: es\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/whatsnew/2.5.rst:3
 msgid "What's New in Python 2.5"
@@ -770,7 +770,7 @@ msgid ""
 "operation, as in ``val = (yield i) + 12``.)"
 msgstr ""
 "(:pep:`342` explica las reglas exactas, que consisten en que una expresión :"
-"keyword:`yield`` debe ir siempre entre paréntesis, excepto cuando ocurre en "
+"keyword:`yield`\\ debe ir siempre entre paréntesis, excepto cuando ocurre en "
 "la expresión de nivel superior en el lado derecho de una asignación.  Esto "
 "significa que puedes escribir ``val = yield i`` pero tienes que usar "
 "paréntesis cuando hay una operación, como en ``val = (yield i) + 12``)"
@@ -1151,7 +1151,7 @@ msgstr ""
 "excepción se vuelve a lanzar: cualquier valor falso vuelve a lanzar la "
 "excepción, y ``True`` resultará en suprimirla.  Sólo en raras ocasiones "
 "querrá suprimir la excepción, porque si lo hace el autor del código que "
-"contiene la declaración ':keyword:`with`` nunca se dará cuenta de que algo "
+"contiene la declaración ':keyword:`with`' nunca se dará cuenta de que algo "
 "ha ido mal."
 
 #: ../Doc/whatsnew/2.5.rst:672
@@ -1216,7 +1216,7 @@ msgstr ""
 "El método :meth:`__enter__` es bastante sencillo, ya que sólo hay que "
 "iniciar una nueva transacción.  Para esta aplicación el objeto cursor "
 "resultante sería un resultado útil, por lo que el método lo devolverá.  El "
-"usuario puede entonces añadir ``as cursor`` a su sentencia ':keyword:`with`` "
+"usuario puede entonces añadir ``as cursor`` a su sentencia ':keyword:`with`' "
 "para ligar el cursor a un nombre de variable. ::"
 
 #: ../Doc/whatsnew/2.5.rst:718
@@ -1298,7 +1298,7 @@ msgid ""
 msgstr ""
 "El módulo :mod:`contextlib` también tiene una función ``anidada(mgr1, "
 "mgr2, ...)`` que combina varios gestores de contexto para que no sea "
-"necesario escribir sentencias ':keyword:`with`` anidadas.  En este ejemplo, "
+"necesario escribir sentencias ':keyword:`with`' anidadas.  En este ejemplo, "
 "la única sentencia ':keyword:`!with`` inicia una transacción de base de "
 "datos y adquiere un bloqueo de hilo::"
 
@@ -1840,7 +1840,7 @@ msgstr ""
 "Python 2.5, una nueva advertencia :exc:`ImportWarning` se activa cuando una "
 "importación habría recogido un directorio como paquete pero no se encontró "
 "ningún :file:`__init__.py`.  Esta advertencia se ignora silenciosamente por "
-"defecto; proporcione la <-W>opción</-W>:option: <-W>`-Wd` cuando ejecute el "
+"defecto; proporcione la opción :option:`-Wd <-W>` cuando ejecute el "
 "ejecutable de Python para mostrar el mensaje de advertencia. (Implementado "
 "por Thomas Wouters)</-W>"
 
